--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: April 5, 2025.
+% date: April 12, 2025.
 
 % Copyright © 2025 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -196,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2025 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2025-04-05},
+  pdfdate={2025-04-12},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2025-04-05}
+\date{2025-04-12}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -594,7 +594,7 @@ yellow light, we keep it on at least Minimum Left Flashing Yellow time
 to make sure the left turning traffic is able to start up.
 
 In our example, signal Faces A and E have their Minimum Left Flashing Yellow
-time set to 5 seconds.  The other signal faces do not use this timer
+time set to 10 seconds.  The other signal faces do not use this timer
 since their SIgnal Face Conflict and Partial Signal Face Conflict
 tables are the same.
 
@@ -1161,7 +1161,7 @@ signal faces F and G to turn green when their Red Limit timers complete,
 as described above.
 
 The following are the events that take place assuming there is only
-one vehicle that turns left, but it chooses to wait for a green arrow.
+one vehicle that turns left after waiting at the light for a short time..
 
 \input{left_turn_table.tex}
 
