--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: April 12, 2025.
+% date: April 13, 2025.
 
 % Copyright © 2025 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -196,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2025 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2025-04-12},
+  pdfdate={2025-04-13},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2025-04-12}
+\date{2025-04-13}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -574,7 +574,7 @@ cannot make its turn for Left Flashing Yellow Waiting time, the oncoming
 traffic will be stopped, thus allowing a protected left turn.
 
 In our example, signal faces A and E have a Left Flashing Yellow Waiting time
-of 10 seconds.  The other signal faces do not make use of this timer
+of 15 seconds.  The other signal faces do not make use of this timer
 since their Signal Face Conflict and Partial Signal Face
 Conflict tables are the same.
 
@@ -594,7 +594,7 @@ yellow light, we keep it on at least Minimum Left Flashing Yellow time
 to make sure the left turning traffic is able to start up.
 
 In our example, signal Faces A and E have their Minimum Left Flashing Yellow
-time set to 10 seconds.  The other signal faces do not use this timer
+time set to 5 seconds.  The other signal faces do not use this timer
 since their SIgnal Face Conflict and Partial Signal Face Conflict
 tables are the same.
 
@@ -1160,6 +1160,9 @@ A will turn red and eventually become clear, which will allow
 signal faces F and G to turn green when their Red Limit timers complete,
 as described above.
 
+However, if the vehicle makes the permissive left turn, signal face A
+returns to red, never causing signal faces F and G to turn red.
+
 The following are the events that take place assuming there is only
 one vehicle that turns left after waiting at the light for a short time..
 
@@ -1182,7 +1185,7 @@ so the left turn is protected rather than permissive.
 
 Signal faces B, C, F and G will want to turn green and so signal faces
 F and G will ask signal face A to turn red.  Signal faces B and C
-will turn green without waiting for singla face A to clear, since
+will turn green without waiting for signal face A to clear, since
 they do not conflict.  When signal face A is clear signal faces
 F and G will turn green, getting us back to the idle state.
 
@@ -1218,9 +1221,9 @@ B, C, F, and G turn green, getting us back to the idle state.
 
 To summarize, if traffic arrives in quick succession on signal faces
 A, psw, D, E, pne, H and J, traffic will flow through signal faces
-A and E, then through psw, pse, pnw, and pne, then H and J, and finally D.
+A and E, then through psw and pne, then H and J, and finally D.
 
-The following table shows the most important events in this screnrioario.
+The following table shows the most important events in this scenario.
 
 \input{multiple_table.tex}
 
